fix: text overflowing in event details

--- a/themes/2025/assets/css/schedule.css
+++ b/themes/2025/assets/css/schedule.css
@@ -91,8 +91,7 @@
 
 .event-details {
   cursor: pointer;
-  display: grid;
-  grid-template-columns: auto 1fr 50px;
+  display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
